--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /[Ll]ibrary/
 /[Tt]emp/
-/[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Oo]bj/
 /Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
@@ -22,6 +22,7 @@ ExportedObj/
 *.booproj
 *.svd
 *.pdb
+*.meta
 
 # Unity3D generated meta files
 *.pidb.meta
