--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ sysinfo.txt
 ProjectSettings/ProjectVersion\.txt
 
 Assets/SteamVR/Resources/SteamVR_Settings\.asset\.meta
+
+Packages/manifest\.json
